--- a/a-A-Student-Resources-Website-Prototype/package.json
+++ b/a-A-Student-Resources-Website-Prototype/package.json
@@ -1,34 +1,54 @@
 {
-  "name": "aa",
+  "name": "venus",
   "version": "1.0.0",
-  "description": "",
-  "main": "youtube.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Venus Template",
+  "author": "Pasquale Vitiello <pasqualevitiello@gmail.com>",
+  "license": "GPLv3",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bgoonz/a-A-Student-Resources-Website-Prototype.git"
+    "url": "https://bitbucket.org/pasqualevitiello/venus.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bgoonz/a-A-Student-Resources-Website-Prototype/issues"
+    "url": "https://bitbucket.org/pasqualevitiello/venus/issues"
   },
-  "homepage": "https://github.com/bgoonz/a-A-Student-Resources-Website-Prototype#readme",
-  "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "csurf": "^1.11.0",
-    "express": "^4.17.1",
-    "markdown-to-pug": "^1.0.11",
-    "morgan": "^1.10.0",
-    "pg": "^8.5.1",
-    "pug": "^3.0.0",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+  "scripts": {
+    "clean": "rimraf dist/{css/*,js/*,images/*}",
+    "autoprefixer": "postcss -u autoprefixer -r dist/css/*",
+    "scss": "node-sass --output-style compressed -o dist/css src/scss",
+    "lint": "eslint src/js || true",
+    "lint-scss": "stylelint src/scss/*.scss --syntax scss || true",
+    "uglify": "mkdirp dist/js -p && uglifyjs src/js/*.js -m -c -o dist/js/main.min.js",
+    "imagemin": "imagemin src/images/* -o dist/images",
+    "serve": "browser-sync start --server --files \"dist/css/*.css, dist/js/*.js, **/*.html, !node_modules/**/*.html\"",
+    "build:css": "run-s lint-scss scss autoprefixer",
+    "build:js": "run-s lint uglify",
+    "build:images": "run-s imagemin",
+    "build": "run-s build:*",
+    "watch:css": "onchange \"src/scss\" -- run-s build:css",
+    "watch:js": "onchange \"src/js\" -- run-s build:js",
+    "watch:images": "onchange \"src/images\" -- run-s build:images",
+    "watch": "run-p serve watch:*",
+    "postinstall": "run-s build watch"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+    "autoprefixer": "^9.0.1",
+    "browser-sync": "^2.12.8",
+    "eslint": "^5.2.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "imagemin-cli": "^3.0.0",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^4.9.2",
+    "npm-run-all": "^4.1.3",
+    "onchange": "^4.1.0",
+    "postcss-cli": "^6.0.0",
+    "rimraf": "^2.5.4",
+    "stylelint": "^9.4.0",
+    "uglify-es": "^3.3.10"
+  },
+  "homepage": "https://bitbucket.org/pasqualevitiello/venus#readme",
+  "main": ".eslintrc.js"
 }
