--- a/PUBLIC/other-pages/weeks/solution/package.json
+++ b/PUBLIC/other-pages/weeks/solution/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/appacademy-starters/responsive-design-file-browser-starter#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "browserify": "^17.0.0",
     "express": "^4.17.1",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
